[tool.poetry]
name = "fair_assess1"
version = "0.1.0"
description = "A short description of your project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
dash = "^2.14.0"
flask = "^2.3.3"
gunicorn = "^20.1.0"
python = "^3.11"
pandas = "^2.0"
numpy = "^1.24"  # Add numpy version that is compatible with your pandas version
